# hermes_a2a

./: .gitignore  AGENTS.md  README.md  __init__.py  cli.py  plugin.yaml  pyproject.toml  schemas.py  tools.py
.agents/skills/maintainer-comments/: SKILL.md
.agents/skills/maintainer-comments/agents/: openai.yaml
.github/workflows/: tests.yml
src/hermes_a2a/: __init__.py  adapter.py  cli.py  client.py  config.py  mapping.py  protocol.py  schemas.py  server.py  store.py  tools.py
tests/: test_adapter.py  test_cli_entrypoint.py  test_config.py  test_protocol.py  test_readme.py  test_register.py  test_root_plugin.py  test_server.py  test_shims.py  test_store.py  test_tools.py
