[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-a2a"
version = "0.1.0"
description = "Hermes plugin that exposes bidirectional A2A bridge surfaces"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "kaitian" }]
dependencies = []

[project.optional-dependencies]
sdk = ["a2a-sdk[http-server,sqlite]>=0.3.0"]

[project.entry-points."hermes_agent.plugins"]
a2a = "hermes_a2a"

[project.scripts]
hermes-a2a = "hermes_a2a.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
